# petlitestar

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yaml  pyproject.toml
nginx/: Dockerfile  config.conf
src/: app.py  db.py  utils.py
src/auth/: controller.py  middleware.py  models.py  scheme.py  settings.py
src/chats/: controllers.py  models.py  paginators.py  scheme.py
src/organization/: controllers.py  models.py  paginators.py  scheme.py
src/tests/: conftest.py  test_auth.py  test_chats.py  test_organization.py  test_users.py
src/users/: controllers.py  models.py  paginators.py  scheme.py
