[tool.poetry]
name = "petlitestar"
version = "0.1.0"
description = ""
authors = ["kozlovmvl <kozlov.mvl@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = "^2.8.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
gunicorn = "^22.0.0"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"
advanced-alchemy = "^0.9.3"
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.4"
anyio = "^4.3.0"
pytest-asyncio = "^0.23.6"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestConfigWarning",
]
pythonpath = "./src"
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
